--- a/src/scss/common/_blocks.scss
+++ b/src/scss/common/_blocks.scss
@@ -369,11 +369,7 @@ figure {
     position: absolute;
     left: 50%;
     z-index: -1;
-    background: {
-      position: center;
-      repeat: no-repeat;
-      size: contain;
-    }
+    background: no-repeat center/contain;
     width: 400px;
     max-width: 90%;
     opacity: .15;
