--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -37,11 +37,7 @@ select {
     top: 53%;
     right: 4px;
     display: block;
-    background: {
-      image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='black' d='M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z'/%3E%3C/svg%3E");
-      repeat: no-repeat;
-      size: contain;
-    }
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='black' d='M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z'/%3E%3C/svg%3E") no-repeat center/contain;
     transform: translateY(-50%);
     height: 14px;
     width: 14px;
