Update font weight options

--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -529,14 +529,18 @@
 // =============================================================================
 
 :root[data-font-weight=normal]:is(html) {
+  --font-smoothing-webkit: subpixel-antialiased;
+  --font-smoothing-moz: auto;
   --font-weight-normal: 400;
+  --font-weight-semi-strong: 600;
   --font-weight-strong: 600;
   --font-weight-medium: 500;
-  --font-weight-heading: 600;
+  --font-weight-heading: 700;
   --font-weight-badge: 600;
   --font-weight-post-meta: 400;
   --font-weight-ribbon: 700;
   --font-weight-navigation: 400;
+  --font-letter-spacing-base: 0em; // Unit is required!
 }
 
 :root[data-font-weight=thinner]:is(html) {
