--- a/src/scss/_mobile-menu.scss
+++ b/src/scss/_mobile-menu.scss
@@ -57,16 +57,54 @@ body:not(.mobile-menu-open) {
   }
 }
 
-.mobile-menu-open {
-  overflow: hidden;
+#site {
+  &::before {
+    content: '';
+    position: fixed;
+    inset: 0 100% -128px 0;
+    z-index: 100000; // Above adminbar
+    display: block;
+    background: #000;
+    opacity: 0;
+    transition: opacity 0.3s, right 0s;
+    transition-delay: 0s, 0.3s; // Delay instant movement of overlay until fade is done
+  }
+}
 
-  .mobile-menu {
+.mobile-menu-open {
+  :is(.mobile-menu, .mobile-menu.advanced-mobile-menu) {
+    left: 0;
     display: flex;
     content-visibility: visible;
+    opacity: 1;
+  }
+
+  &.advanced-mobile-menu {
+    overflow: hidden;
 
     @include bp(desktop) {
       left: max(50% - var(--site-width) / 2, (min(75vw, #{$max-mobile-menu-width}) / 2));
       transform: translate3d(-50%, 0, 0);
+    }
+
+    #wpadminbar {
+      opacity: 0;
+    }
+
+    #site {
+      > :is(nav, header, main, footer, div) {
+        pointer-events: none;
+      }
+    }
+  }
+
+  &:not(.advanced-mobile-menu) {
+    #site {
+      &::before {
+        inset: 0 0 -128px;
+        opacity: 0.5;
+        transition: opacity 0.3s; // Override transition of overlay position
+      }
     }
   }
 
@@ -74,10 +112,13 @@ body:not(.mobile-menu-open) {
     .off {
       display: none;
     }
+
+    > .icon {
+      width: 0.9em;
+    }
   }
 
   #wpadminbar {
-    opacity: 0;
     pointer-events: none;
   }
 }
@@ -85,12 +126,10 @@ body:not(.mobile-menu-open) {
 .mobile-menu {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -100%;
   bottom: -128px;
-  display: none;
-  content-visibility: hidden;
+  z-index: 100001; // Above adminbar
   flex-direction: column;
-  justify-content: space-between;
   background-color: var(--mobile-menu-background);
   font-size: 15px;
   line-height: 1.66; // ~ 25px @ 15px
@@ -100,6 +139,8 @@ body:not(.mobile-menu-open) {
   max-width: min(75vw, #{$max-mobile-menu-width});
   overflow: auto;
   box-shadow: var(--mobile-menu-site-box-shadow);
+  opacity: 0;
+  transition: left 0.3s, opacity 0.3s;
 
   @media (hover: hover) and (pointer: fine) {
     scrollbar-width: none; // FF
@@ -107,6 +148,17 @@ body:not(.mobile-menu-open) {
     &::-webkit-scrollbar {
       width: 0;
     }
+  }
+
+  &._advanced-mobile-menu {
+    top: 0;
+    left: 0;
+    display: none;
+    content-visibility: hidden;
+    background: var(--mobile-menu-advanced-background);
+    opacity: 1;
+    box-shadow: var(--mobile-advanced-menu-site-box-shadow);
+    transition: none;
   }
 
   .icon-menu {
@@ -133,6 +185,7 @@ body:not(.mobile-menu-open) {
   }
 
   &__center {
+    flex-grow: 1;
     padding: 0 0 16px;
   }
 
