Add escape class to _v-scrolling for scrollbar
As it is apparently really difficult to make the scrollbar visible again.

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -462,7 +462,7 @@ button[type=submit]:where(:not(._inline)) {
     overflow: hidden scroll;
     scrollbar-width: none; // FF
 
-    &::-webkit-scrollbar {
+    &:not(._v-scrolling-scrollbar)::-webkit-scrollbar {
       width: 0;
     }
   }
