--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -70,9 +70,12 @@
   }
 }
 
+:root:not(.no-nav-sticky) .site .main-navigation.is-sticky {
+  position: sticky;
+}
+
 .main-navigation {
   --focus-offset: -2px;
-  position: sticky;
   top: calc(0px - var(--nav-observer-offset, 0px));
   z-index: 1000;
   color: var(--navigation-text);
