Remove contain: layout from header CSS class
Didn't help with anything and could cause confusion if users want to remove the relative position.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: var(--layout-site-header-height);
   width: 100%;
-  contain: style layout size; // Improves performance
+  contain: style size; // Improves performance
 
   &__content {
     height: 100%;
