--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -53,7 +53,7 @@ body:not(.is-editor):not(.is-admin) {
   }
 }
 
-.two-columns {
+.grid-columns {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(308px, 1fr));
   gap: 1.5rem;
