--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -56,14 +56,14 @@ body:not(.is-editor):not(.is-admin) {
 .grid-columns {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(var(--grid-columns-min, 308px), 1fr));
-  gap: var(--grid-columns-gap, 1.5rem);
+  gap: var(--grid-columns-row-gap, 1.5rem) var(--grid-columns-row-col, 1.5rem);
 
   &._collapse-on-mobile {
     @media only screen and (max-width: 767px) {
       display: block;
 
       > :not(:last-child) {
-        margin-bottom: var(--grid-columns-gap, 1.5rem);
+        margin-bottom: var(--grid-columns-row-gap, 1.5rem);
       }
     }
   }
