--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -1,3 +1,16 @@
+:root.age-modal-open {
+  overflow: hidden;
+
+  body {
+    overflow: hidden;
+  }
+
+  :is(.site, .mobile-menu, .consent-banner) {
+    pointer-events: none;
+    filter: blur(5px) brightness(0.5);
+  }
+}
+
 .site {
   position: relative;
   left: 0;
