--- a/src/scss/common/_modals.scss
+++ b/src/scss/common/_modals.scss
@@ -6,6 +6,10 @@
   line-height: 1.3;
   contain: content; // Improve performance
 
+  &.age-confirmation {
+    --modal-width: 450px;
+  }
+
   &:not(._open) {
     display: none;
     content-visibility: hidden;
@@ -225,6 +229,10 @@
         margin-bottom: 0;
       }
     }
+
+    &._large {
+      font-size: var(--fs-xs);
+    }
   }
 
   &__textarea {
@@ -248,6 +256,15 @@
     display: flex;
     justify-content: flex-end;
     padding: 0 12px 12px;
+
+    &._age-confirmation {
+      gap: 9px; // 9px + 3px margin
+      padding-top: 12px;
+
+      .button {
+        flex: 1 1 auto;
+      }
+    }
 
     .button {
       &:not(:first-child) {
