Add container query units to grid gaps

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -15,6 +15,11 @@
 }
 
 .small-card-block,
+.article-card-block {
+  container-type: inline-size;
+}
+
+.small-card-block,
 .article-card-block .pagination {
   margin-top: 2rem;
 }
