--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -352,3 +352,7 @@ html:not(.logged-in) body:not(.logged-in) .hide-if-logged-out,
 .scroll-margin-top {
   scroll-margin-top: 48px;
 }
+
+.container-inline-size {
+  container-type: inline-size;
+}
