--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -353,8 +353,13 @@ button[type=submit]:where(:not(._inline)) {
 
 .card-list {
   display: grid;
-  grid-template-columns: 100%;
-  gap: 2rem 0;
+  grid-template-columns: var(--card-list-template-columns, 100%);
+  gap: var(--card-list-row-gap, max(4cqw, 2rem)) var(--card-list-row-col, 0);
+
+  // Fallback
+  @supports not (width: 1cqw) {
+    gap: var(--card-list-row-gap, 2rem) var(--card-list-row-col, 0);
+  }
 
   > .pagination:is(li) {
     padding-top: 0;
